# manim

./: .gitignore  manimgl_tutorial_zh.md
cpp_manim/: CMakeLists.txt  README.md
cpp_manim/examples/: CMakeLists.txt  animation.cpp  basic.cpp
cpp_manim/include/manimcpp/: animation.h  camera.h  constants.h  geometry.h  manimcpp.h  mobject.h  opengl.h  scene.h  utils.h
cpp_manim/src/: CMakeLists.txt  animation.cpp  camera.cpp  constants.cpp  geometry.cpp  mobject.cpp  opengl.cpp  scene.cpp  utils.cpp
cpp_manim/tests/: CMakeLists.txt  mobject_test.cpp  utils_test.cpp
